# picopt

./: .bumpversion.cfg  .coveragerc  .devenv.yaml  .dockerignore  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  2amr  CHANGELOG  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  NEWS  NEWS.md  README.md  README.rst  TODO  VERSION  build.Dockerfile  build.sh  circle.yml  codacy.yaml  compose.yaml  debian.sources  docker-build.sh  docker-compose.yaml  eslint.config.js  example.jxl  fix-lint.sh  imap2gmail.py  kill-square-brackets-recurse.sh  kill-square-brackets.sh  killxorg  lint.sh  mkdocs.yml  monkeyapply.sh  monkeyrun.sh  mypy.ini  (+32 more)
.circleci/: config.yml
.github/workflows/: ci.yml
Koi/: backup-koi
cfg/: common.mk  django.mk  docs.mk  frontend.mk  gha_std.mk  node_root.mk  python.mk
ci/: apt.sh  build.sh  create-output-dirs.sh  install.sh  mozjpeg.sh  mozjpeg_3.3.1-1_amd64.deb  mozjpeg_4.0.0_amd64.deb  pngout.sh  setup.sh  test.sh
koi/: backup-koi-a  backup-koi-b  koi-rsync-backup.include  switch-netatalk.sh
old_tests/: test.sh
old_tests/test_files/comic_archives/: test_cbz.cbz
old_tests/test_files/images/: test_pnm.pnm
picopt/: __init__.py  archiveinfo.py  cli.py  comic.py  config.py  config_default.yaml  configurable.py  data.py  detect_format.py  doctor.py  exceptions.py  extern.py  file_format.py  files.py  formats.py  gif.py  jpeg.py  name.py  old_timestamps.py  optimize.py  optimize_image.py  path.py  picopt.py  png.py  printer.py  report.py  settings.py  settings_base.py  stats.py  tasks.py  timestamp.py  timestamps.py  walk.py
picopt/config/: __init__.py  consts.py  cwebp.py  handlers.py  settings.py
picopt/formats/: __init__.py  all_formats.py  comic.py  comic_formats.py  format.py  gif.py  jpeg.py  png.py  png_bit_depth.py  programs.py  webp.py
picopt/handlers/: __init__.py  container.py  convertible.py  detect_format.py  factory.py  get_handler.py  gif.py  handler.py  image.py  image_animated.py  jpeg.py  jpegxl.py  metadata.py  mixins.py  non_pil.py  png.py  png_animated.py  svg.py  webp.py  webp_animated.py  zip.py
picopt/handlers/archive/: __init__.py  archive.py  archiveinfo.py  rar.py  seven_zip.py  tar.py  zip.py
picopt/handlers/container/: __init__.py
picopt/handlers/container/animated/: __init__.py  img2webp.py  webp.py  webpbase.py  webpmux.py
picopt/handlers/container/archive/: __init__.py  rar.py  seven_zip.py  tar.py  zip.py
picopt/handlers/handler/: __init__.py  cleanup.py  init.py
picopt/handlers/image/: __init__.py  animated.py  gif.py  jpeg.py  jpegxl.py  png.py  svg.py  webp.py
picopt/log/: __init__.py  progress.py  reporter.py  styles.py  summary.py
picopt/pillow/: __init__.py  deprecated.py  header.py  jpeg_xmp.py  png_bit_depth.py  unpack.py  webp_lossless.py
picopt/plugins/: __init__.py  gif.py  jpeg.py  pdf.py  pil_convertible.py  png.py  rar.py  seven_zip.py  svg.py  tar.py  webp.py  zip.py
picopt/plugins/base/: __init__.py  animated.py  archive.py  container.py  format.py  handler.py  image.py  plugin.py  tool.py
picopt/rc/: __init__.py  settings_base.py  timestamp_base.py
picopt/tests/: test_comic.py  test_detect_format.py  test_extern.py  test_settings.py
picopt/walk/: __init__.py  detect_format.py  handler_factory.py  init.py  legacy_timestamps.py  run.py  scheduler.py  skip.py  skippers.py  walk.py  walkers.py
picopt/zipfile_remove/: __init__.py
test/: test.sh
test/test_files/comic_archives/: test_cbr.cbr
test_files/: test_cbr.cbr
test_orignals/: test_cbz.cbz
tests/: __init__.py  base.py  colors.py  test_cli.py  test_comic.py  test_containers.py  test_detect_format.py  test_extern.py  test_files.py  test_gif.py  test_images_dir.py  test_jpeg.py  test_jpg.py  test_mpo.py  test_old_timestamps.py  test_optimize.py  test_pdf.py  test_png.py  test_png_bit_depth.py  test_preserve.py  test_settings.py  test_stats.py  test_timestamp.py  test_timestamps.py  test_walk.py
tests/cli/: __init__.py  test_images_dir.py  test_small_comic.py
tests/integration/: __init__.py  base.py  base_test_images.py  test_containers.py  test_images_dir.py  test_mpo.py  test_old_timestamps.py  test_one_container.py  test_preserve.py  test_small_comic.py  test_timestamps.py
tests/test_files/comic_archives/: test_cbr.cbr  test_small_cbz.cbz
tests/test_files/containers/: igp-twss.epub  test_7z.7z  test_cbt.cbt  test_cbz.cbz  test_rar.rar  test_tar.tar  test_tbz.tar.bz2
tests/test_files/images/: test_jpg.jxl  test_jxl.jxl  test_tiff.tiff
tests/test_files/invalid/: test_rar.rar
tests/unit/: test_cli.py  test_comic.py  test_config.py  test_detect_format.py  test_extern.py  test_files.py  test_gif.py  test_jpeg.py  test_optimize.py  test_png.py  test_png_bit_depth.py  test_settings.py  test_stats.py  test_timestamp.py  test_unpack.py  test_walk.py  test_webp.py  test_webp_lossless.py  test_zip.py
