[project]
name = "picopt"
requires-python = "<4.0,>=3.10"
authors = [{ name = "AJ Slater", email = "aj@slater.net" }]
license = { text = "GPL-3.0-only" }
dependencies = [
  "confuse<3.0.0,>=2.0.0",
  "defusedxml<1.0.0,>=0.7.1",
  "filetype<2.0.0,>=1.2.0",
  "humanize<5.0.0,>=4.0.0",
  "piexif<2.0.0,>=1.1.3",
  "py7zr<2.0.0,>=1.0.0",
  "pyoxipng<10.0.0,>=9.0.0",
  "python-dateutil<3.0,>=2.8",
  "rarfile<5.0,>=4.0",
  "ruamel-yaml<1.0.0,>=0.18.5",
  "treestamps<3.0.0,>=2.2.6",
  "typing-extensions>=4.13.2",
  "Pillow>=9.5",
]
version = "5.1.0a0"
description = "A multi format lossless image optimizer that uses external tools"
readme = "README.md"
keywords = ["image", "png", "jpg", "cbz", "cbr"]
classifiers = [
  "Topic :: Internet :: WWW/HTTP :: Site Management",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Environment :: Console",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
]

[project.urls]
Source = "https://github.com/ajslater/picopt"
Issues = "https://github.com/ajslater/picopt/issues"
homepage = "https://github.com/ajslater/picopt"
documentation = "https://github.com/ajslater/picopt"

[project.scripts]
picopt = "picopt.cli:main"

[dependency-groups]
dev = [
  "basedpyright~=1.29.1",
  "codespell<3.0.0,>=2.1.0",
  "coverage[toml]<8.0,>=7.0",
  "neovim<1.0.0,>=0.3.1",
  "pytest-cov<7.0,>=6.0",
  "pytest-gitignore<2.0,>=1.3",
  "radon[toml]<7.0.0,>=6.0.1",
  "ruff<1.0.0,>=0.11.5",
  "types-python-dateutil<3.0.0,>=2.8.0",
  "vulture<3.0,>=2.1",
  "hatchling<2.0.0,>=1.27.0",
  "toml-cli<1.0.0,>=0.7.0",
  "pyclean<4.0.0,>=3.1.0",
  "icecream>=2.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["picopt", "tests", "NEWS.md"]

[tool.hatch.build.targets.wheel]
include = ["picopt", "NEWS.md"]

[tool.basedpyright]
exclude = [
  "**/.*",
  "**/__pycache__",
  "**/node_modules",
  "dist",
  "test-results",
  "typings",
  "vulture_whitelist.py",
]
pythonVersion = "3.10"
failOnWarnings = false
reportAny = false
reportExplicitAny = false
reportImportCycles = true
reportIncompatibleUnannotatedOverride = true
reportMissingParameterType = false
reportMissingTypeArgument = false
reportPrivateUsage = false # ruff does this
reportUnannotatedClassAttribute = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnusedCallResult = false
reportUnusedParameter = false # ruff does this
reportMissingTypeStubs = false

[tool.codespell]
skip = ".*,*~,./dist,./node_modules,./package.json,./package-lock.json,./uv.lock,./test-results"
builtin = "clear,rare,code"
check-hidden = true
ignore-words-list = "thead"

[tool.coverage.run]
source = ["picopt"]
branch = true
concurrency = ["multiprocessing"]
omit = [
  "*/.*",
  "*__pycache__*",
  "dist/*",
  "node_modules/*",
  "test-results/*",
  "typings/*",
]

[tool.coverage.html]
directory = "test-results/coverage"

[tool.pytest.ini_options]
addopts = "--junitxml=test-results/pytest/junit.xml -ra --strict-markers --cov --cov-append --cov-report=html --cov-report=term"
junit_family = "xunit2"
testpaths = "tests"

[tool.radon]
exclude = "*~,.*,.*/*,__pycache__/*,dist/*,node_modules/*,test-results/*,typings/*"

[tool.ruff]
extend-exclude = ["cache", "typings", "zipfile_remove"]
target-version = "py310"

[tool.ruff.lint]
extend-ignore = [
  "BLE001",  # catch bare exception
  "COM812",  # missing trailing comma
  "COM819",  # prohibit trailing comma
  "D203",    # blank line before class docstring
  "D206",    # formatted
  "D212",    # first line multi line docstring.
  "E111",    # formatted
  "E114",    # formatted
  "E117",    # over-indented
  "E501",    # 88 char line
  "ISC001",  # formatted
  "PERF203", # try block in loop 
  "S101",    # assert
  "W191",    # formatted
]
extend-select = [
  "A",
  # "AIR",
  # "ANN",
  "ARG",
  "ASYNC",
  "B",
  "B9",
  "BLE",
  "C",
  "C4",
  "C90",
  "COM",
  # "CPY",
  "D",
  "DJ",
  # "DOC",
  "DTZ",
  "E",
  "EM",
  "ERA",
  "EXE",
  "F",
  "FA",
  # "FAST",
  "FBT",
  # "FIX",
  "FLY",
  # "FURB",
  # "G",
  "I",
  "ICN",
  "INP",
  "INT",
  "ISC",
  "LOG",
  # "PD",
  "PERF",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  # "Q", Formatted
  "N",
  # NPY,
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLF",
  "SLOT",
  "T10",
  "T20",
  "TC",
  "TCH",
  # "TD",
  "TID",
  "TRY",
  "UP",
  "W",
  "YTT",
]
external = ["V101"]
task-tags = ["TODO", "FIXME", "XXX", "http", "HACK"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SLF001", "T201", "T203"]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.vulture]
exclude = [
  "*/.*",
  "*/__pycache__*",
  "*/node_modules*",
  "dist/",
  "test-results/",
  "typings/",
]
min_confidence = 61
sort_by_size = true
